--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Key used to upload source to Etherscan (get from https://explorer.optimism.io/myapikey)
+,# Key used to upload source to Etherscan (get from https://explorer.optimism.io/myapikey)
 # 
 ETHERSCAN_API_KEY=
 
